@@ -352,8 +352,8 @@ public class MetaClassTest {
   @Test
   public void testPrimitives(){
     // pass a value as a class
-    MetaClass.create(CLASS+"$Primitive").createInstance(new Integer(7));
-    MetaClass.create(CLASS+"$Primitive").createInstance(new Double(7));
+    MetaClass.create(CLASS+"$Primitive").createInstance(Integer.valueOf(7));
+    MetaClass.create(CLASS+"$Primitive").createInstance(Double.valueOf(7));
     // pass a value as a primitive
     MetaClass.create(CLASS+"$Primitive").createInstance(7);
     MetaClass.create(CLASS+"$Primitive").createInstance(2.8);
@@ -367,12 +367,12 @@ public class MetaClassTest {
 
   @Test
   public void testCastSimple() {
-    assertEquals(new Double(1.0), MetaClass.cast("1.0", Double.class));
-    assertEquals(new Integer(1), MetaClass.cast("1", Integer.class));
-    assertEquals(new Integer(1), MetaClass.cast("1.0", Integer.class));
-    assertEquals(new Long(1L), MetaClass.cast("1.0", Long.class));
-    assertEquals(new Short((short) 1), MetaClass.cast("1.0", Short.class));
-    assertEquals(new Byte((byte) 1), MetaClass.cast("1.0", Byte.class));
+    assertEquals(Double.valueOf(1.0), MetaClass.cast("1.0", Double.class));
+    assertEquals(Integer.valueOf(1), MetaClass.cast("1", Integer.class));
+    assertEquals(Integer.valueOf(1), MetaClass.cast("1.0", Integer.class));
+    assertEquals(Long.valueOf(1L), MetaClass.cast("1.0", Long.class));
+    assertEquals(Short.valueOf((short) 1), MetaClass.cast("1.0", Short.class));
+    assertEquals(Byte.valueOf((byte) 1), MetaClass.cast("1.0", Byte.class));
     assertEquals("Hello", MetaClass.cast("Hello", String.class));
     assertEquals(true, MetaClass.cast("true", Boolean.class));
     assertEquals(true, MetaClass.cast("1", Boolean.class));
